--- a/src/components/bet/bet-box-pc-1/css/bet_single.scss
+++ b/src/components/bet/bet-box-pc-1/css/bet_single.scss
@@ -507,7 +507,6 @@
         background: var(--q-gb-bg-c-22);
         color: var(--q-gb-t-c-6);
         font-size: 13px;
-        border-top: 1px solid var(--q-gb-bd-c-8) !important;
         .bet-toggle-text {
 
           font-size: 13px;
@@ -544,7 +543,35 @@
       }
       .bet-toggle-up {
         color: var(--q-gb-t-c-6);
-        border-bottom: 0.5px solid var(--q-gb-bd-c-8) !important;
+      }
+
+      .bet-single-mix-input{
+        margin-left: 5px;
+        margin-right: 5px;
+        margin-bottom: 0;
+        border: 0px;
+        background: var(--q-gb-bg-c-22);
+        border-radius: 0 0 6px 6px;
+        .bet-single-input{
+          margin-top: 0;
+          padding: 17px 10px 15px 10px;
+          border-top: 1px solid var(--q-gb-bd-c-8) ;
+        }
+      }
+      .bet_input_defaut_one{
+        margin-left: 5px;
+        margin-right: 5px;
+        margin-bottom: 0;
+        border: 0px;
+        background: var(--q-gb-bg-c-22);
+        border-bottom: 0.5px solid var(--q-gb-bd-c-8);
+        .bet-single-input{
+          margin-top: 0;
+          padding: 17px 10px 15px 10px;
+        }
+        .bet-input-failure{
+          width: 100%;
+        }
       }
 
 
