--- a/project/yazhou-h5/src/pages/details/analysis-matches/styles/highlights.scss
+++ b/project/yazhou-h5/src/pages/details/analysis-matches/styles/highlights.scss
@@ -10,6 +10,7 @@
     top: 1.22rem;
     padding: 0.2rem 0.48rem;
     z-index: 15;
+    background-color: var(--q-gb-bg-c-17);
     &.is-result-details {
       top: 1.62rem;
     }
@@ -25,14 +26,14 @@
       justify-content: center;
       align-items: center;
       border-radius: 0.08rem;
-  
+      background-color: var(--q-gb-bg-c-15);
       &::after {
         content: "";
         pointer-events: none;
         position: absolute;
         left: 0;
         top: 0;
-        border: 1px solid var(--q-color-border-color-25);
+        border: 1px solid var(--q-gb-bd-c-5);
         border-radius: 0.16rem;
         width: 200%;
         height: 200%;
@@ -51,6 +52,8 @@
         font-size: 0.14rem;
         border-radius: 0.08rem;
         padding: 0 .15rem;
+        background-color: var(--q-gb-bg-c-15);
+        color: var(--q-gb-t-c-3);
   
         &:not(:first-child) {
           position: relative;
@@ -62,9 +65,11 @@
             position: absolute;
             left: 0;
             top: 0.08rem;
+            background-color: var(--q-gb-bg-c-11);
           }
   
           &.is-active {
+            
             &::before {
               display: none;
             }
@@ -74,6 +79,8 @@
         &.is-active {
           height: 0.29rem;
           border-radius: 0.08rem;
+          color: var(--q-gb-t-c-14);
+          background-color: var(--q-gb-bg-c-13);
         }
       }
     }
@@ -97,6 +104,7 @@
         height: .04rem;
         border-radius: 50%;
         z-index: 10;
+        background-color: var(--q-gb-bg-c-12);
       }
       .time-line {
         position: absolute;
@@ -104,6 +112,7 @@
         top: 0;
         width: 1px;
         height: .55rem;
+        background-color: var(--q-gb-bg-c-12);
       }
       .time-line-ball {
         position: absolute;
@@ -115,6 +124,8 @@
         background-repeat: no-repeat;
         background-size: 100% 100%;
         z-index: 10;
+        background-color: var(--q-gb-bg-c-14);
+        background-image: url("public/image/svg/details/time-line-ball.svg");
       }
       &.real-time, &.game-over {
         .time-line {
@@ -474,6 +485,24 @@
     }
     .item-flag {
       margin: 0 .1rem;
+    }
+    .item-flag.icon-flag-game-over, .item-flag.icon-flag-game-start {
+      background-image: url("public/image/svg/details/whistle.svg");
+    }
+    .item-flag.icon-flag-corner {
+      background-image: url("public/image/svg/details/corner.svg");
+    }
+    .item-flag.icon-flag-card-yellow {
+      background-image: url("public/image/svg/details/card_yellow.svg");
+    }
+    .item-flag.icon-flag-card-red {
+      background-image: url("public/image/svg/details/card_red.svg");
+    }
+    .item-flag.icon-flag-goal {
+      background-image: url("public/image/svg/details/goal.svg");
+    }
+    .item-flag.time-line-ball {
+      background-image: url("public/image/svg/details/time-line-ball.svg");
     }
     .item-flag-real-time {
       min-width: 0.14rem;
