analysis-text-color-4 => analysis-color-0

--- a/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
+++ b/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
@@ -122,7 +122,7 @@
           display: flex;
           align-items: center;
           .label {
-            color: var(--qq--analysis-text-color-4);
+            color: var(--q-analysis-color-0);
             font-size: 16px;
           }
           .item-wrap {
