--qq--analysis-bg-color-6 => analysis-color-9

--- a/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
+++ b/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
@@ -64,7 +64,7 @@
       width: 20px;
       height: 20px;
       border-radius: 10px;
-      background: var(--qq--analysis-bg-color-6);
+      background: var(--q-analysis-color-9);
       color: var(--q-analysis-color-13);
       display: flex;
       align-items: center;
