--- a/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
+++ b/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
@@ -74,7 +74,7 @@
   &.show_all_rank {
     .d-tr:nth-child(3) {
       .ranking {
-        background: var(--qq--analysis-bg-color-7);
+        background: var(--q-analysis-color-11);
       }
     }
     .d-tr:nth-child(4) {
