analysis-bg-color-8 => analysis-color-13

--- a/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
+++ b/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
@@ -79,7 +79,7 @@
     }
     .d-tr:nth-child(4) {
       .ranking {
-        background: var(--qq--analysis-bg-color-8);
+        background: var(--q-analysis-color-13);
       }
     }
     .d-tr:nth-child(5) {
