analysis-bg-color-9 => analysis-color-15

--- a/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
+++ b/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
@@ -84,7 +84,7 @@
     }
     .d-tr:nth-child(5) {
       .ranking {
-        background: var(--qq--analysis-bg-color-9);
+        background: var(--q-analysis-color-15);
       }
     }
   }
