--- a/project/yazhou-h5/src/pages/details/styles/details.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details.scss
@@ -5,7 +5,7 @@
   overflow-y: auto;
   overflow-x: hidden;
   .details-f {
-    background-color: #f7f9fe;
+    background-color: #f5f5f5; // var(--q-detials-color-8)
     :deep(.transition-zhiding) {
       .play-name-outer-wrapper {
         .play-name {
