y0-text-color9=>gb-t-c-3

--- a/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
+++ b/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
@@ -17,7 +17,7 @@
     border-bottom: none !important;
   }
   .d-body {
-    color: var(--qq--y0-text-color9);
+    color: var(--q-gb-t-c-3);
     .d-td:not(:last-child) {
       border-right: 1px solid var(--q-analysis-color-10);
     }
