--- a/project/yazhou-h5/src/pages/match-list/styles/match-container.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/match-container.scss
@@ -863,6 +863,7 @@
       .go-to-i-detail-i {
         width: 0.68rem;
         height: 0.47rem;
+        border-left: 1px solid #f5f5f5;
 
         .word {
           margin-right: 0.08rem;
