--- a/project/yazhou-h5/src/pages/details/analysis-matches/styles/line-up.scss
+++ b/project/yazhou-h5/src/pages/details/analysis-matches/styles/line-up.scss
@@ -143,7 +143,7 @@
           width: 0.36rem;
           height: 0.36rem;
           background: var(--q-analysis-bg-gradient-2) !important;
-          border: 1px solid  var(--q-analysis-text-color-1);
+          border: 1px solid  var(--q-analysis-bg-color-1);
           border-radius: 50%;
   
           display: flex;
@@ -153,7 +153,7 @@
           > span {
   
             font-size: 0.2rem;
-            color: var(--q-analysis-text-color-1);
+            color: var(--q-analysis-bg-color-1);
             text-align: center;
           }
         }
@@ -161,7 +161,7 @@
         > span {
   
           font-size: 0.12rem;
-          color: var(--q-analysis-text-color-1);
+          color: var(--q-analysis-bg-color-1);
           margin-top: 0.02rem;
         }
       }
@@ -302,7 +302,7 @@
       padding-left: 0.24rem;
       color: var(--q-analysis-text-color-15);
       font-size: 0.14rem;
-      background-color:var(--q-analysis-text-color-1);
+      background-color:var(--q-gb-bg-c-15);
       letter-spacing: 0;
   
       font-weight: bold;
@@ -323,7 +323,7 @@
     .public_form {
       position: relative;
       margin-bottom: 0.1rem;
-      background-color:var(--q-analysis-text-color-1);
+      background-color:var(--q-gb-bg-c-15);
       /*  头部 */
       .header {
         height: 0.3rem;
@@ -331,7 +331,7 @@
         text-align: center;
         line-height: 0.32rem;
         padding: 0 0.1rem;
-        background-color: var(--q-analysis-text-color-1);
+        background-color: var(--q-gb-bg-c-15);
         color:  var(--q-analysis-text-color-22);
         border-bottom: 1px solid  var(--q-analysis-text-color-26);
         border-top: 1px solid var(--q-analysis-text-color-26);
@@ -358,7 +358,7 @@
           align-items: center;
           justify-content: center;
           font-size: 0.12rem;
-          color: var(--q-analysis-text-color-29) !important;
+          color: var(--q-analysis-text-color-4) !important;
         }
       }
   
