--- a/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
+++ b/src/components/analysis/template/base-panel/base-panel-template-1/index.scss
@@ -53,7 +53,7 @@
   .d-header {
     height: 30px;
     color: var(--q-analysis-color-12);
-    background: var(--q-analysis-bg-color-17);
+    background: var(-q-analysis-color-17);
   }
   .d-body {
     height: 40px;
@@ -172,7 +172,7 @@
       display: flex;
       justify-content: flex-end;
       align-items: center;
-      background: var(--q-analysis-bg-color-17);
+      background: var(-q-analysis-color-17);
       height: 28px;
       color: var(--q-analysis-color-12);
       padding: 0 20px;
