赛事分析新增euid参数

--- a/project/yazhou-pc/src/layouts/match-list.scss
+++ b/project/yazhou-pc/src/layouts/match-list.scss
@@ -575,13 +575,13 @@ body {
 
     .match-type {
       border: 1px solid var(--q-gb-bg-c-9);
-      background: linear-gradient(225deg, var(--q-gb-bg-lg-7));
+      background: var(--q-gb-bg-lg-7);
       border-radius: 6px;
       color: var(--q-gb-t-c-18);
 
       &.match-type-even {
         border: 1px solid var(--q-gb-bg-c-9);
-        background-image: linear-gradient(225deg, var(--q-gb-bg-lg-7));
+        background-image: var(--q-gb-bg-lg-7);
       }
     }
 
